@@ -140,31 +140,43 @@ public class HRegionInfo implements WritableComparable {
    * @throws IllegalArgumentException
    */
   public HRegionInfo(HTableDescriptor tableDesc, Text startKey, Text endKey,
-      final boolean split) throws IllegalArgumentException {
+    final boolean split)
+  throws IllegalArgumentException {
+    this(tableDesc, startKey, endKey, split, System.currentTimeMillis());
+  }
 
+
+  /**
+   * Construct HRegionInfo with explicit parameters
+   * 
+   * @param tableDesc the table descriptor
+   * @param startKey first key in region
+   * @param endKey end of key range
+   * @param split true if this region has split and we have daughter regions
+   * regions that may or may not hold references to this region.
+   * @param regionid Region id to use.
+   * @throws IllegalArgumentException
+   */
+  public HRegionInfo(HTableDescriptor tableDesc, Text startKey, Text endKey,
+    final boolean split, final long regionid)
+  throws IllegalArgumentException {
     if(tableDesc == null) {
       throw new IllegalArgumentException("tableDesc cannot be null");
     }
-
     this.endKey = new Text();
     if(endKey != null) {
       this.endKey.set(endKey);
     }
-    
     this.offLine = false;
-    this.regionId = System.currentTimeMillis();
-    
+    this.regionId = regionid;
     this.regionName = new Text(tableDesc.getName().toString() + DELIMITER +
         (startKey == null ? "" : startKey.toString()) + DELIMITER +
         regionId);
-      
     this.split = split;
-
     this.startKey = new Text();
     if(startKey != null) {
       this.startKey.set(startKey);
     }
-    
     this.tableDesc = tableDesc;
     setHashCode();
   }
