@@ -26,6 +26,8 @@ Release 0.1.3 - Unreleased
    HBASE-613   Timestamp-anchored scanning fails to find all records
    HBASE-709   Deadlock while rolling WAL-log while finishing flush
    HBASE-707   High-load import of data into single table/family never triggers split
+   HBASE-710   If clocks are way off, then we can have daughter split come
+               before rather than after its parent in .META.
 
 Release 0.1.2 - 05/13/2008
 
